@@ -1,3 +1,7 @@
+(April/12/2013)
+	*Updated "Touhou Items Mod" info: Now "Universal", Added description
+	*Updated "Jaffas and More" info: Now "Universal", Added description
+
 (April/11/2013)
 	*Updated "Wild Caves 3" info: Now "Universal", Added description
 	*Updated "BigTrees" info: Added description
